--- a/KlausurtrainerPlugin/KlausurtrainerPlugin/KlausurtrainerPlugin.csproj
+++ b/KlausurtrainerPlugin/KlausurtrainerPlugin/KlausurtrainerPlugin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -10,6 +10,11 @@
     <Version>1.0.5</Version>
     <PackageReleaseNotes>Fixed the bug of generating different seeds for the same user.
 The timeout test is now much faster.</PackageReleaseNotes>
+  <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
 </Project>
